# wrk-newtype-serial

./: .gitignore  LICENSE  stack.yaml  wrk-newtype-serial.cabal
src/: Main.hs
src/Newtype/Serial/: Month.hs
