name:                wrk-newtype-serial
version:             1.0
synopsis:            Exploring de/serializing newtypes with Aeson
description:         Please see README.md
homepage:            http://hub.darcs.net/dino/wrk-newtype-serial
license:             ISC
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2017 Dino Morelli
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  stack.yaml
--                     README.md

executable newtype-serial
   hs-source-dirs:   src
   main-is:          Main.hs
   default-language: Haskell2010
   build-depends:      base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , mtl
                     , string-conv
   other-modules:    Newtype.Serial.Month
